--- a/src/Makefile
+++ b/src/Makefile
@@ -14,9 +14,9 @@ override CFLAGS= -g -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS)
 override LDFLAGS= -Wl,-Map,$(APP).map
 
 
-PROJ=AVR_CAN_proj
+PROJ=../build/AVR_CAN_proj
 
-SRCS= main.c lcd.c display.c sja_control.c avr_sja1000p.c
+SRCS = main.c lcd.c display.c sja_control.c avr_sja1000p.c
 OBJS:=$(SRCS:.c=.o)
 
 
