Start working on sensor functions.

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ override LDFLAGS= -Wl,-Map,$(APP).map
 
 PROJ=../build/AVR_CAN_proj
 
-SRCS = main.c lcd.c display.c sja_control.c avr_sja1000p.c
+SRCS = main.c lcd.c display.c sja_control.c avr_sja1000p.c sensor.c
 OBJS:=$(SRCS:.c=.o)
 
 
